// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Path 1 path component 1`] = `
<Path
  path="a"
>
  <strong>
    a
  </strong>
</Path>
`;

exports[`Path 2 path components 1`] = `
<Path
  path="a/b"
>
  <span
    className="text-muted"
  >
    a
    /
  </span>
  <strong>
    b
  </strong>
</Path>
`;

exports[`Path 3 path components 1`] = `
<Path
  path="a/b/c"
>
  <span
    className="text-muted"
  >
    a/b
    /
  </span>
  <strong>
    c
  </strong>
</Path>
`;

exports[`Path no path components 1`] = `
<Path
  path=""
/>
`;
